# pi-yo_6

./: .gitignore  README.md  audio.py  audio_source.py  bot-start.bat  bot-start.sh  config.ini  guild_config.py  main.py  music.py  player.py  pyproject.toml  requirements.txt  start.bat  start.sh  synthetic_voice.py  voice.py  voice_client.py  voice_generate.py
Romaji/: to_kana.py
pi_yo_6/: audio_source.py  chatgpt.py  dictionary_manager.py  downloader.py  embeds.py  guild_config.py  load_config.py  main.py  message_unit.py  open_jtalk.py  siri.py  synthetic_voice.py  systhetic_engines.py  utils.py  view.py  voice.py  voice_client.py  voice_list.py
pi_yo_6/coeiroink/: coeiroink.py  core.py  requirements.txt  run.py  synthetic_engine.py
pi_yo_6/coeiroink/voicevox_engine/: full_context_label.py  model.py
pi_yo_6/coeiroink/voicevox_engine/dev/core/: __init__.py  coeiroink.py
pi_yo_6/coeiroink/voicevox_engine/dev/synthesis_engine/: coeiroink.py
pi_yo_6/discord/: multi_player.py  opus.py  voicce_client.py  voice_client.py
pi_yo_6/open_jtalk/: core.py
pi_yo_6/resources/: config_template.py
pi_yo_6/romaji/: to_kana.py  translation.py
pi_yo_6/template/: _config.py  config_template.py  利用規約.md
pi_yo_6/voicevox/: core.py  speaker_id.py
pi_yo_6/voicevox/voicevox_core-linux-x64-cpu/: README.txt
voicevox_engine-c-1.6.0-v-0.12.3/: requirements.txt  run.py  runn.py
voicevox_engine-c-1.6.0-v-0.12.3/voicevox_engine/dev/synthesis_engine/: coeiroink.py
voicevox_engine-c-1.6.0-v-0.12.3/voicevox_engine/synthesis_engine/: make_synthesis_engines.py
