[project]
name = "pi-yo-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alkana>=0.0.3",
    "dacite>=1.9.2",
    "discord>=2.3.2",
    "discord-py[voice]>=2.7.0",
    "ffmpeg>=1.4",
    "numpy>=2.4.2",
    "pyahocorasick>=2.3.0",
    "pydantic>=2.12.5",
    "pyopenjtalk-plus[onnxruntime]>=0.4.1.post7",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
